<resources>

    <string name="app_name">Acordei</string>
    <string name="action_settings">Settings</string>
    <string name="deputados_estaduais">Deputados Estaduais</string>
    <string name="deputados_federais">Deputados Federais</string>
    <string name="senadores">Senadores</string>
    <string name="governadores">Governadores</string>

    <string name="deputado_estadual">Deputado Estadual</string>
    <string name="deputado_federal">Deputado Federal</string>
    <string name="senador">Senador</string>
    <string name="governador">Governador</string>

    <string name="presidente">Presidente</string>
    <string name="slash">/</string>
    <string name="todos">Todos</string>

</resources>
